# ZugkraftDB

./: .dockerignore  BUILD.bazel  Dockerfile  README.md  go.mod  go.sum  go.work  go.work.sum
api/v1/: causal_types.go
cmd/client/: main.go
config/: config.example.yaml
config/kustomize/base/: deployment.yaml  kustomization.yaml  redis-service.yaml  service.yaml
config/kustomize/overlays/wan/: db-config-cm.yaml  kustomization.yaml
internal/controller/: causal_controller.go
internal/query/: datalog.go  datalog_test.go
internal/shim/: mock.go  shim.go  store_interface.go
internal/store/cassandra/: cassandra.go
internal/store/mock/: mock_cache.go  mock_store.go
internal/store/redis/: redis_cache.go
test/integration/: causal_test.go
